--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "zepto": "^1.2.0"
   },
   "devDependencies": {
